--- a/umbrello/dialogs/diagrampropertiespage.ui
+++ b/umbrello/dialogs/diagrampropertiespage.ui
@@ -5,47 +5,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>407</width>
-    <height>388</height>
+    <width>411</width>
+    <height>391</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" >
-   <property name="spacing" >
-    <number>6</number>
-   </property>
-   <property name="leftMargin" >
-    <number>11</number>
-   </property>
-   <property name="topMargin" >
-    <number>11</number>
-   </property>
-   <property name="rightMargin" >
-    <number>11</number>
-   </property>
-   <property name="bottomMargin" >
-    <number>11</number>
-   </property>
    <item>
-    <widget class="QGroupBox" name="GroupBox1" >
+    <widget class="QGroupBox" name="ui_groupBoxDiagramProperties" >
      <property name="title" >
       <string>Diagram Properties</string>
      </property>
      <layout class="QVBoxLayout" >
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <property name="leftMargin" >
-       <number>11</number>
-      </property>
-      <property name="topMargin" >
-       <number>11</number>
-      </property>
-      <property name="rightMargin" >
-       <number>11</number>
-      </property>
-      <property name="bottomMargin" >
-       <number>11</number>
-      </property>
       <item>
        <layout class="QHBoxLayout" >
         <property name="spacing" >
@@ -64,7 +34,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QLabel" name="TextLabel1" >
+         <widget class="QLabel" name="ui_labelDiagramName" >
           <property name="text" >
            <string>Name:</string>
           </property>
@@ -74,7 +44,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="diagramName" />
+         <widget class="KLineEdit" name="ui_diagramName" />
         </item>
        </layout>
       </item>
@@ -107,7 +77,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="TextLabel4" >
+           <widget class="QLabel" name="ui_labelZoom" >
             <property name="text" >
              <string>Zoom:</string>
             </property>
@@ -117,7 +87,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="zoom" >
+           <widget class="QSpinBox" name="ui_zoom" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
               <horstretch>0</horstretch>
@@ -133,7 +103,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="textLabel1" >
+           <widget class="QLabel" name="ui_labelZoomUnit" >
             <property name="text" >
              <string>%</string>
             </property>
@@ -145,23 +115,7 @@
          </layout>
         </item>
         <item>
-         <spacer>
-          <property name="orientation" >
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeType" >
-           <enum>QSizePolicy::Expanding</enum>
-          </property>
-          <property name="sizeHint" >
-           <size>
-            <width>50</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="showOpSigs" >
+         <widget class="QCheckBox" name="ui_showOpSigs" >
           <property name="text" >
            <string>Show operation signature</string>
           </property>
@@ -170,7 +124,7 @@
        </layout>
       </item>
       <item>
-       <widget class="Line" name="Line1" >
+       <widget class="Line" name="ui_line" >
         <property name="frameShape" >
          <enum>QFrame::HLine</enum>
         </property>
@@ -194,66 +148,37 @@
          <number>0</number>
         </property>
         <item>
-         <layout class="QHBoxLayout" >
-          <property name="leftMargin" >
-           <number>0</number>
+         <widget class="QCheckBox" name="ui_checkBoxShowGrid" >
+          <property name="text" >
+           <string>Show &amp;grid</string>
           </property>
-          <property name="topMargin" >
-           <number>0</number>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="ui_snapToGrid" >
+          <property name="text" >
+           <string>Snap &amp;to grid</string>
           </property>
-          <property name="rightMargin" >
-           <number>0</number>
-          </property>
-          <property name="bottomMargin" >
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="QCheckBox" name="showGrid" >
-            <property name="text" >
-             <string>Show &amp;grid</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="snapToGrid" >
-            <property name="text" >
-             <string>Snap &amp;to grid</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="snapComponentSizeToGrid" >
-            <property name="whatsThis" >
-             <string>Snap the size of the components to be a multiple of the grid spacing.
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="ui_snapComponentSizeToGrid" >
+          <property name="whatsThis" >
+           <string>Snap the size of the components to be a multiple of the grid spacing.
 If 'Snap to Grid' is enabled a component will always be aligned with the grid on all 4 sides.</string>
-            </property>
-            <property name="text" >
-             <string>Snap component size</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <spacer>
-          <property name="orientation" >
-           <enum>Qt::Vertical</enum>
           </property>
-          <property name="sizeType" >
-           <enum>QSizePolicy::Expanding</enum>
+          <property name="text" >
+           <string>Snap component size</string>
           </property>
-          <property name="sizeHint" >
-           <size>
-            <width>20</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
+         </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" >
+        <property name="spacing" >
+         <number>6</number>
+        </property>
         <property name="leftMargin" >
          <number>0</number>
         </property>
@@ -267,94 +192,78 @@ If 'Snap to Grid' is enabled a component will always be aligned with the grid on
          <number>0</number>
         </property>
         <item>
-         <layout class="QHBoxLayout" >
-          <property name="spacing" >
-           <number>6</number>
+         <widget class="QLabel" name="ui_labelGridSpacing" >
+          <property name="text" >
+           <string>Grid spacing:  </string>
           </property>
-          <property name="leftMargin" >
-           <number>0</number>
+          <property name="wordWrap" >
+           <bool>false</bool>
           </property>
-          <property name="topMargin" >
-           <number>0</number>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="ui_labelX" >
+          <property name="text" >
+           <string>X</string>
           </property>
-          <property name="rightMargin" >
-           <number>0</number>
+          <property name="wordWrap" >
+           <bool>false</bool>
           </property>
-          <property name="bottomMargin" >
-           <number>0</number>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="ui_gridSpaceX" >
+          <property name="minimum" >
+           <number>5</number>
           </property>
-          <item>
-           <widget class="QLabel" name="TextLabel2" >
-            <property name="text" >
-             <string>Grid spacing:  </string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="TextLabelX" >
-            <property name="text" >
-             <string>X</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSpinBox" name="gridSpaceX" >
-            <property name="minimum" >
-             <number>5</number>
-            </property>
-            <property name="maximum" >
-             <number>100</number>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="TextLabel3" >
-            <property name="text" >
-             <string>Y</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSpinBox" name="gridSpaceY" >
-            <property name="minimum" >
-             <number>5</number>
-            </property>
-            <property name="maximum" >
-             <number>100</number>
-            </property>
-           </widget>
-          </item>
-         </layout>
+          <property name="maximum" >
+           <number>100</number>
+          </property>
+         </widget>
         </item>
         <item>
          <spacer>
           <property name="orientation" >
-           <enum>Qt::Vertical</enum>
+           <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeType" >
-           <enum>QSizePolicy::Expanding</enum>
+           <enum>QSizePolicy::Fixed</enum>
           </property>
           <property name="sizeHint" >
            <size>
-            <width>20</width>
+            <width>40</width>
             <height>20</height>
            </size>
           </property>
          </spacer>
         </item>
+        <item>
+         <widget class="QLabel" name="ui_labelY" >
+          <property name="text" >
+           <string>Y</string>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="ui_gridSpaceY" >
+          <property name="minimum" >
+           <number>5</number>
+          </property>
+          <property name="maximum" >
+           <number>100</number>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" >
+        <property name="spacing" >
+         <number>6</number>
+        </property>
         <property name="leftMargin" >
          <number>0</number>
         </property>
@@ -368,59 +277,24 @@ If 'Snap to Grid' is enabled a component will always be aligned with the grid on
          <number>0</number>
         </property>
         <item>
-         <layout class="QHBoxLayout" >
-          <property name="spacing" >
-           <number>6</number>
+         <widget class="QLabel" name="ui_labeLineWidth" >
+          <property name="text" >
+           <string>Line width:  </string>
           </property>
-          <property name="leftMargin" >
-           <number>0</number>
+          <property name="wordWrap" >
+           <bool>false</bool>
           </property>
-          <property name="topMargin" >
-           <number>0</number>
-          </property>
-          <property name="rightMargin" >
-           <number>0</number>
-          </property>
-          <property name="bottomMargin" >
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="QLabel" name="TextLabe15" >
-            <property name="text" >
-             <string>Line width:  </string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSpinBox" name="lineWidth" >
-            <property name="minimum" >
-             <number>0</number>
-            </property>
-            <property name="maximum" >
-             <number>10</number>
-            </property>
-           </widget>
-          </item>
-         </layout>
+         </widget>
         </item>
         <item>
-         <spacer>
-          <property name="orientation" >
-           <enum>Qt::Vertical</enum>
+         <widget class="QSpinBox" name="ui_lineWidth" >
+          <property name="minimum" >
+           <number>0</number>
           </property>
-          <property name="sizeType" >
-           <enum>QSizePolicy::Expanding</enum>
+          <property name="maximum" >
+           <number>10</number>
           </property>
-          <property name="sizeHint" >
-           <size>
-            <width>20</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
+         </widget>
         </item>
        </layout>
       </item>
@@ -428,7 +302,7 @@ If 'Snap to Grid' is enabled a component will always be aligned with the grid on
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="GroupBox2" >
+    <widget class="QGroupBox" name="ui_groupBoxDocumentation" >
      <property name="title" >
       <string>Documentation</string>
      </property>
@@ -452,7 +326,7 @@ If 'Snap to Grid' is enabled a component will always be aligned with the grid on
        <number>6</number>
       </property>
       <item row="0" column="0" >
-       <widget class="Q3TextEdit" name="documentation" />
+       <widget class="QTextEdit" name="ui_documentation" />
       </item>
      </layout>
     </widget>
@@ -463,9 +337,9 @@ If 'Snap to Grid' is enabled a component will always be aligned with the grid on
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <customwidgets>
   <customwidget>
-   <class>Q3TextEdit</class>
-   <extends>Q3Frame</extends>
-   <header>q3textedit.h</header>
+   <class>KLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>klineedit.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
