--- a/umbrello/dialogs/exportallviewsdialogbase.ui
+++ b/umbrello/dialogs/exportallviewsdialogbase.ui
@@ -18,72 +18,65 @@
   <layout class="QVBoxLayout" >
    <item>
     <layout class="QVBoxLayout" >
-     <property name="spacing" >
-      <number>15</number>
-     </property>
      <item>
-      <layout class="QVBoxLayout" >
-       <item>
-        <widget class="QLabel" name="kURLRequesterLabel" >
-         <property name="toolTip" >
-          <string>The base directory used to save the images</string>
-         </property>
-         <property name="text" >
-          <string>&amp;Directory to save the diagrams in:</string>
-         </property>
-         <property name="wordWrap" >
-          <bool>false</bool>
-         </property>
-         <property name="buddy" >
-          <cstring>m_kURL</cstring>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="KUrlRequester" name="m_kURL" >
-         <property name="toolTip" >
-          <string>The base directory used to save the images</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" >
-       <item>
-        <widget class="QLabel" name="imageTypeLabel" >
-         <property name="toolTip" >
-          <string>The format that the images will be exported to</string>
-         </property>
-         <property name="text" >
-          <string>&amp;Image type:</string>
-         </property>
-         <property name="wordWrap" >
-          <bool>false</bool>
-         </property>
-         <property name="buddy" >
-          <cstring>m_imageType</cstring>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="m_useFolders" >
+      <widget class="QLabel" name="kURLRequesterLabel" >
        <property name="toolTip" >
-        <string>Create in the target directory the same tree structure used
-in the document to store the views</string>
-       </property>
-       <property name="whatsThis" >
-        <string>The views are stored in folders in the document. The same tree structure used in the document to store the views can be created in the selected base directory with this option.
-Only the folders made by the user are created in the base directory (Logical view, use case view and so on are not created).</string>
+        <string>The base directory used to save the images</string>
        </property>
        <property name="text" >
-        <string>Use &amp;folders</string>
+        <string>&amp;Directory to save the diagrams in:</string>
+       </property>
+       <property name="wordWrap" >
+        <bool>false</bool>
+       </property>
+       <property name="buddy" >
+        <cstring>m_kURL</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="KUrlRequester" name="m_kURL" >
+       <property name="toolTip" >
+        <string>The base directory used to save the images</string>
        </property>
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="ui_imageTypeLayout">
+     <item>
+      <widget class="QLabel" name="ui_imageTypeLabel" >
+       <property name="toolTip" >
+        <string>The format that the images will be exported to</string>
+       </property>
+       <property name="text" >
+        <string>&amp;Image type:</string>
+       </property>
+       <property name="wordWrap" >
+        <bool>false</bool>
+       </property>
+       <property name="buddy" >
+        <cstring>m_imageType</cstring>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="m_useFolders" >
+     <property name="toolTip" >
+      <string>Create in the target directory the same tree structure used
+in the document to store the views</string>
+     </property>
+     <property name="whatsThis" >
+      <string>The views are stored in folders in the document. The same tree structure used in the document to store the views can be created in the selected base directory with this option.
+Only the folders made by the user are created in the base directory (Logical view, use case view and so on are not created).</string>
+     </property>
+     <property name="text" >
+      <string>Use &amp;folders</string>
+     </property>
+    </widget>
    </item>
    <item>
     <spacer>
@@ -96,7 +89,7 @@ Only the folders made by the user are created in the base directory (Logical vie
      <property name="sizeHint" >
       <size>
        <width>20</width>
-       <height>16</height>
+       <height>10</height>
       </size>
      </property>
     </spacer>
