--- a/umbrello/dialogs/diagrampropertiespage.ui
+++ b/umbrello/dialogs/diagrampropertiespage.ui
@@ -326,7 +326,7 @@ If 'Snap to Grid' is enabled a component will always be aligned with the grid on
        <number>6</number>
       </property>
       <item row="0" column="0" >
-       <widget class="QTextEdit" name="ui_documentation" />
+       <widget class="KTextEdit" name="ui_documentation" />
       </item>
      </layout>
     </widget>
